fit date display

--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -13,7 +13,7 @@
                 {{message.messageText}}
                 <ul>
                     <li>{{message.sender}}</li>
-                    <li>{{message.timeSent | date: 'EEEE, d, HH:mm'}} </li>
+                    <li>{{message.timeSent | date: 'EEEE, d MMMM, HH:mm'}} </li>
                 </ul>
             </li>
         </ul>
