--- a/project/views/login.ejs
+++ b/project/views/login.ejs
@@ -4,7 +4,7 @@
         <title>Chat Application</title>
     </head>
     <body >
-        <form action="/signup" method="POST">
+        <form action="/signup" method="POST" enctype="multipart/form-data">
             <input type="text" name="username" id="username" placeholder="Username"></input>
             <button type="submit">Go</button>
         </form>
