--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Chat Application</title>
+        <script type="text/javascript" src="/js/bundle.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/index.js"></script>
